fix z-index

--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -1,17 +1,19 @@
 @import "variable";
 
 .popup {
+  //height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
 
-  z-index: 1;
+  z-index: 99;
 
   &--left {
 
     @media screen and (min-width: $minViewDesktop) {
+
       flex-basis: 320px;
       position: static;
     }
